# simple-blog

./: .gitignore  README.md  pyproject.toml
blog/: admin.py  models.py  serializers.py  urls.py  views.py
blog/tests/: tests.py
core/: settings.py  urls.py
